--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,11 +1,14 @@
 .num-pad {
+  flex: 3 1;
   width: 100%;
 }
 
 .btn {
+  height: 98px;
+  width: 100px;
 }
 
-.btn.operator {
+/* .btn.operator {
   height: 98px;
   width: 98px;
-}
+} */
