styled buttons, made clear and 0 button full size, MVP complete

--- a/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
+++ b/Project-II-Calculator/calculator/src/components/ButtonComponents/Button.css
@@ -1,14 +1,28 @@
 .num-pad {
-  flex: 3 1;
   width: 100%;
 }
 
 .btn {
   height: 98px;
   width: 100px;
+  font-size: 45px;
 }
 
-/* .btn.operator {
-  height: 98px;
-  width: 98px;
-} */
+.btn.bold {
+  font-size: 35px;
+  font-weight: 600;
+}
+
+.btn.operator {
+  font-size: 65px;
+  color: white;
+  background-color: darkred;
+}
+
+.solo {
+  width: 100%;
+}
+
+.solo .btn {
+  width: 100%;
+}
