--- a/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
+++ b/Project-II-Calculator/calculator/src/components/DisplayComponents/Display.css
@@ -4,9 +4,11 @@
   display: flex;
   justify-content: flex-end;
   align-items: center;
-  background: #4d4d4d;
+  background: #1a1a1a;
 }
 
 .calculator-display .text {
+  padding-right: 10px;
+  font-size: 70px;
   color: #ffffff;
 }
