--- a/Project-II-Calculator/calculator/src/components/CalculatorContainer/CalculatorContainer.css
+++ b/Project-II-Calculator/calculator/src/components/CalculatorContainer/CalculatorContainer.css
@@ -1,7 +1,8 @@
-.calculator-container {
+.calculator-container { 
   max-height: 600px;
   width: 100%;
   max-width: 400px;
+  border: 1px lightgray solid;
 }
 
 .calculator-container .calculator-body {
